--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <testng.version>7.8.0</testng.version>
     <lombok.version>1.18.30</lombok.version>
     <assertj.version>3.24.2</assertj.version>
+    <wdm.version>5.6.2</wdm.version>
     <java.version>11</java.version>
     <maven.compiler.target>${java.version}</maven.compiler.target>
     <maven.compiler.source>${java.version}</maven.compiler.source>
@@ -60,6 +61,12 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
       <version>3.13.0</version>
+    </dependency>
+    <dependency>
+      <groupId>io.github.bonigarcia</groupId>
+      <artifactId>webdrivermanager</artifactId>
+      <version>${wdm.version}</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 </project>
